# usaf

./: .gitignore  CITATION.cff  CLA.md  LICENSE  NOTICE  README.md  setup.py  train.py
benchmarks/: cuda_t4.md  kaggle_t4_bench.py  sparse_dispatch.md
logs/: qwen3_12h_final.jsonl
plans/: VULKAN_COMPLETE_PLAN.md
results/: qwen3_12h.json
usaf/: __init__.py  cache.py  config.py  data.py  evaluate.py  frozen_cache.py  importance.py  model_factory.py  moe_loader.py  olmoe_dml.py  olmoe_streaming.py  quantization.py  qwen3_layer_vk.py  qwen3_layer_vk_persistent.py  qwen3_setup.py  qwen3moe_dml.py  selector.py  sparse_optim.py  train.py  trainer.py  utils.py  vk_layer.py  vk_training.py  vulkan_autograd.py
usaf/vulkan/: CMakeLists.txt
usaf/vulkan/include/: vulkan_core.hpp
usaf/vulkan/src/: pybind_module.cpp  rmsnorm_debug.cpp  rope_debug_gen.cpp  test_kernels.cpp  test_vulkan.cpp  vulkan_core.cpp
usaf/vulkan/src/kernels/: attention.comp  dequant_q4.comp  gemm_fp16.comp  residual_add.comp  rmsnorm_fp16.comp  rmsnorm_simple.comp  rope_fp16.comp  test_add.comp
usaf/vulkan/test_data/: dequant_meta.txt  gemm_oproj_meta.txt  gemm_qproj_meta.txt  rmsnorm_meta.txt  rope_meta.txt
